2002-01-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/misc.c (get_server_time):
	* fvwm/events.c (My_XNextEvent):
	* fvwm/icccm2.c (SetupICCCM2):
	* fvwm/functions.h:
	* fvwm/commands.h:
	* fvwm/functions.c (func_config):
	* fvwm/schedule.c:
	implemented new command "Schedule"

	* fvwm/builtins.c (CMD_Exec):
	applied job control patch by Alexander Kotelnikov using the portable
	version of setpgrp()

	* libs/setpgrp.c (fvwm_setpgrp):
	* libs/setpgrp.h (fvwm_setpgrp):
	* libs/Makefile.am:
	* configure.in:
	added checks for setpgrp and setpgid

2002-01-29  olicha  <olivier.chapuis@free.fr>

	* acinclude.m4:
	Better test for iconv second argumeny

	* configure.in:
	Use gnu libiconv in priority against the system iconv

2002-01-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (RaiseOrLowerWindow):
	(restack_windows):
	(collect_transients_recursive):
	* fvwm/icons.c (get_visible_icon_window_count):
	fixed stack ring corruption with icons that have either no picture or
	no title

2002-01-28  olicha  <olivier.chapuis@free.fr>

	* fvwm/ewmh_names.c (charset_to_utf8):
	(utf8_to_charset):
	(EWMH_SetVisibleName):
	(get_charset):
	Better message errors in get_charset, use UTF-8 in the place of UTF8,
	set the ewmh visible (icon) name only if the fvwm visible name is
	different from the ICCCM (icon) window name, limit the number of
	conversions error messages to 10

2002-01-28  olicha  <olivier.chapuis@free.fr>

	* fvwm/functions.c (func_config):
	* fvwm/commands.h:
	* fvwm/builtins.c (CMD_PropertyChange):
	New undocumented command PropertyChange to send MX_PROPERTY_CHANGE
	messages

	* fvwm/module_interface.h:
	* fvwm/module_interface.c (BroadcastPropertyChange):
	* libs/Module.h (MX_PROPERTY_CHANGE):
	New module message MX_PROPERTY_CHANGE for all propose messages.

	* fvwm/events.c (HandlePropertyNotify):
	* libs/defaults.h:
	Send a MX_PROPERTY_CHANGE message with MX_PROPERTY_CHANGE_BACKGROUND
	as argument when fvwm2 detects that the root background change