@@ -107,6 +107,7 @@ enum
   F_COPY_MENU_STYLE,
   F_CURRENT,
   F_CURSOR_STYLE,
+  F_DESCHEDULE,
   F_DESKTOP_NAME,
   F_DESTROY_FUNCTION,
   F_DESTROY_MENU,
