@@ -1,3 +1,13 @@
+2002-01-30  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/schedule.c:
+	* fvwm/functions.c (expand_extended_var):
+	implemented $[schedule.last] and $[schedule.next] variables
+	implemented new command "Deschedule"
+
+	* fvwm/misc.c (get_server_time):
+	fixed MouseFocus
+
 2002-01-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/misc.c (get_server_time):
